# llm-matrix-tui

./: .dockerignore  .gitignore  BENCHMARKING.md  CLAUDE.md  Dockerfile  Makefile  README.md  docker-compose.yml  prompts.yml  pyproject.toml
bench-results/: before-buffering.json  smoke.json  smoke2.json
o11y/: docker-compose.yml
o11y/grafana/provisioning/dashboards/: dashboards.yml  simple-dashboard.json  vllm-dashboard.json
o11y/prometheus/: prometheus.yml
o11y/prometheus/rules/: nim-alerts.yml
src/: morpheus.avif
src/matrix_tui/: __init__.py  __main__.py  animation.py  bench.py  bench_compare.py  config.py  fade_math.py  image_mode.py  llm.py  prompt_loader.py  renderer.py  supervisor.py  themes.py  vertical_column.py
tests/: test_animation.py  test_background_fill.py  test_basic.py  test_cli_columns_parse.py  test_image_mode.py  test_language_filtering.py  test_llm_stream.py  test_per_column_heads.py  test_prompt_integration.py  test_renderer.py  test_renderer_color_smoke.py  test_renderer_smoke.py  test_resize_shrink_cancel.py  test_single_column_writer.py  test_stream_single_column_integration.py  test_supervisor_cap_width.py  test_themes.py  test_writer_color_repaint.py  test_writer_skip_newlines_colors.py  test_writer_wrap_colors.py
